--- a/package.json
+++ b/package.json
@@ -16,34 +16,33 @@
     "docker:build": "docker-compose build"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^0.7.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
+    "@auth/drizzle-adapter": "^1.9.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/pg": "^8.10.9",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "drizzle-kit": "^0.20.6",
-    "drizzle-orm": "^0.29.1",
-    "lucide-react": "^0.292.0",
-    "next": "^14.0.3",
-    "next-auth": "^4.24.5",
+    "drizzle-kit": "^0.31.1",
+    "drizzle-orm": "^0.43.1",
+    "lucide-react": "^0.511.0",
+    "next": "^15.3.2",
+    "next-auth": "^5.0.0-beta.28",
     "postgres": "^3.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.9.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.54.0",
-    "eslint-config-next": "^14.0.3",
+    "eslint-config-next": "^15.4.0-canary.51",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
